--- a/UnixBasics/3week/homework 1/202355517-민규-권.md
+++ b/UnixBasics/3week/homework 1/202355517-민규-권.md
@@ -94,7 +94,7 @@ Your friend finally found something more fun than pestering you. Candy, While sh
 `.exrc` 파일을 생성하여 abbreviation을 추가한다.
 
 ```bash
-$ vi .exrc # vi로 .exrc 파일을 연다.
+$ vi ~/.exrc # vi로 .exrc 파일을 연다.
 i # 삽입 모드로 전환한다.
 ab dnas deoxyribonucleic acid strands # dnas를 입력하면 deoxyribonucleic acid strands로 바꾼다.
 <ESC> # 기본 모드로 돌아간다.
@@ -109,3 +109,20 @@ ab dnas deoxyribonucleic acid strands # dnas를 입력하면 deoxyribonucleic ac
 ## 7
 
 She's still out looking for candy. You are feeling better now that you don't have to keep typing that long phrase over and over again. But now you want the text to "wrap" for you whenever it goes beyond column 72, and you don't want to have to see it coming each time and manually hit Enter yourself. You also need to use the restroom, and you have to log out each time you leave this room. Quickly, how do you set vi to wrap the text for you and then make both this setting and your "dnas" macro from the previous question permanent?
+
+`.exrc` 파일을 생성하여 설정을 추가한다.
+
+```bash
+$ vi ~/.exrc # vi로 .exrc 파일을 연다.
+i # 삽입 모드로 전환한다.
+set wm=72 # 텍스트가 72칸을 넘어가면 자동으로 줄바꿈한다.
+ab dnas deoxyribonucleic acid strands # dnas를 입력하면 deoxyribonucleic acid strands로 바꾼다.
+<ESC> # 기본 모드로 돌아간다.
+:wq! # 명령모드를 실행한 뒤(:) 저장하고(w) 종료한다(q!).
+```
+
+이후 vi에서 `dnas`를 입력하면 `deoxyribonucleic acid strands`로 바뀌고, 72칸을 넘어가면 자동으로 줄바꿈되는 것을 확인할 수 있다.
+
+![alt text](image-9.png)
+
+공백을 기준으로 가로 72칸을 넘어가면 자동으로 줄바꿈되는 것을 확인할 수 있다.
