--- a/semester 2/AIProgramming/week_1.ipynb
+++ b/semester 2/AIProgramming/week_1.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 2,
       "metadata": {
         "id": "rqZwYevdbRNM"
       },
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 3,
       "metadata": {
         "id": "zjq9DaTIbgIZ"
       },
@@ -129,7 +129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 4,
       "metadata": {
         "id": "6RgsKtMtbhR-"
       },
@@ -154,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 5,
       "metadata": {
         "id": "laAwMfpBbsVe"
       },
@@ -199,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 6,
       "metadata": {
         "id": "cRpNgM-LbxHK"
       },
@@ -236,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 7,
       "metadata": {
         "id": "t7HV5003b2Ic"
       },
@@ -269,7 +269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 8,
       "metadata": {
         "id": "TNZbCpBAb5n2"
       },
@@ -301,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 9,
       "metadata": {
         "id": "TnFfSuy2b9c0"
       },
@@ -347,12 +347,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "SBUQ1WRTc1Nz"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "21"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "course_name = \"Python for Non-Majors\"\n",
+        "len(course_name)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -366,13 +380,15 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "mGAC-9rSc7Qd"
-      },
-      "outputs": [],
-      "source": []
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- 1st_name -> first_name\n",
+        "- @age -> age\n",
+        "- Full-Name -> Full_Name\n",
+        "- class -> class_var\n",
+        "- list -> list_var"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -386,12 +402,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "B2c46qWfc8z0"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "3164.0625"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "(5 * 3 / 2) ** 4"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -407,12 +436,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "nJN7nZ1Nc-ad"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Alice, 30, New York\n"
+          ]
+        }
+      ],
+      "source": [
+        "name = \"Alice\"\n",
+        "age = 30\n",
+        "city = \"New York\"\n",
+        "\n",
+        "print(name, age, city, sep=\", \")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -428,12 +471,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "BxdeHEF_cB3C"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "1234567890"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "var = \"1234567890\"\n",
+        "var = int(var)\n",
+        "var"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -448,12 +506,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "gDSlPn3DdDOM"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "var = 3.141592\n",
+        "var = int(var)\n",
+        "var"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -468,12 +541,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "04L2YydrdE13"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "9.14\n",
+            "18.84\n"
+          ]
+        }
+      ],
+      "source": [
+        "var1 = 6\n",
+        "var2 = 3.14\n",
+        "\n",
+        "summation = var1 + var2\n",
+        "product = var1 * var2\n",
+        "\n",
+        "print(summation, product, sep=\"\\n\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -488,12 +578,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "ZFivLJHCdGK3"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "True True\n"
+          ]
+        }
+      ],
+      "source": [
+        "x = 10\n",
+        "y = 20\n",
+        "z = 30\n",
+        "\n",
+        "print(x < y, y < z)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -515,7 +619,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 15,
       "metadata": {
         "id": "hS3ZSmItdli2"
       },
@@ -551,7 +655,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 16,
       "metadata": {
         "id": "IxlTOTNgdl8Z"
       },
@@ -584,7 +688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 17,
       "metadata": {
         "id": "B4LmG84gdsl1"
       },
@@ -618,7 +722,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 18,
       "metadata": {
         "id": "MOf-YzBqdvya"
       },
@@ -652,7 +756,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 19,
       "metadata": {
         "id": "delyIF8td1b-"
       },
@@ -684,7 +788,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 20,
       "metadata": {
         "id": "aGWueyhaeARk"
       },
@@ -716,7 +820,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 21,
       "metadata": {
         "id": "y78K2ZSzeCTW"
       },
@@ -751,7 +855,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 22,
       "metadata": {
         "id": "P8nl9cl-eG9X"
       },
@@ -785,7 +889,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 23,
       "metadata": {
         "id": "3S9qvGmGeMO0"
       },
@@ -816,7 +920,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 24,
       "metadata": {
         "id": "B_d_eTEGeSBt"
       },
@@ -854,7 +958,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 25,
       "metadata": {
         "id": "KGlH7hvNeWXd"
       },
@@ -906,12 +1010,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "id": "nvheaxJOedT9"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "execution_count": 32,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "text = \"*\" * 10\n",
+        "len(text)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -926,12 +1044,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "id": "YeC_cgT3ee8q"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Hello World'"
+            ]
+          },
+          "execution_count": 33,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "text = \"hello world\"\n",
+        "text.title()"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -946,12 +1078,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "id": "Q7DxZNeGefP0"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Pto sfn'"
+            ]
+          },
+          "execution_count": 34,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "text = \"Python is fun!\"\n",
+        "result = text[::2]\n",
+        "result"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -966,12 +1113,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
         "id": "1h3JnFZ3efSx"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'\\n\\nThis is a string with \"double quotes\" and a newline.'"
+            ]
+          },
+          "execution_count": 35,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "text = \"\"\"\n",
+        "\n",
+        "This is a string with \"double quotes\" and a newline.\"\"\"\n",
+        "\n",
+        "text"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -986,12 +1150,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "id": "wiEtWocNefV6"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "apple, banana, orange\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"apple\", \"banana\", \"orange\", sep=\", \")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1004,12 +1178,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "id": "LDvc1P3HefYx"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "9.869600294464002\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(float(input()) ** 2)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1026,12 +1210,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
         "id": "W1YLTHq4efbV"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'john[dot]doe[at]example[dot]com'"
+            ]
+          },
+          "execution_count": 41,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "email = \"john.doe@example.com\"\n",
+        "\n",
+        "email.replace(\"@\", \"[at]\").replace(\".\", \"[dot]\")"
+      ]
     }
   ],
   "metadata": {
