feat: adding AreaCalculator Class

--- a/semester 2/AIProgramming/week_2.ipynb
+++ b/semester 2/AIProgramming/week_2.ipynb
@@ -657,12 +657,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "id": "SBUQ1WRTc1Nz"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "even\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"odd\" if int(input()) % 2 else \"even\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -677,12 +687,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "id": "mGAC-9rSc7Qd"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "6\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(max(map(int, input().split())))"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -699,12 +719,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "id": "B2c46qWfc8z0"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "multiple\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"not multiple\" if int(input()) % 15 else \"multiple\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -715,17 +745,28 @@
         "\n",
         "4. Write a Python program that takes three numbers as input and determines whether they form a Pythagorean triple.\n",
         "\n",
-        "\toutput: pythagorean or not pythagorean"
+        "\toutput: Pythagorean or not Pythagorean"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
         "id": "nJN7nZ1Nc-ad"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Pythagorean\n"
+          ]
+        }
+      ],
+      "source": [
+        "a, b, c = sorted(map(int, input().split()))\n",
+        "print(\"Pythagorean\" if a**2 + b**2 == c**2 else \"not Pythagorean\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -744,12 +785,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "id": "BxdeHEF_cB3C"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Normal\n"
+          ]
+        }
+      ],
+      "source": [
+        "height = float(input()) / 100\n",
+        "weight = float(input())\n",
+        "\n",
+        "BMI = weight / height**2\n",
+        "\n",
+        "print(\"Underweight\" if BMI < 18.5 else \"Normal\" if 18.5 <= BMI < 25 else \"Overweight\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -764,13 +820,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 39,
       "metadata": {
         "id": "4CuQ-rftL-3y"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Anagrams\n"
+          ]
+        }
+      ],
       "source": [
-        "# bored = robed\n"
+        "# bored = robed\n",
+        "str1 = input()\n",
+        "str2 = input()\n",
+        "\n",
+        "print(\"Anagrams\" if sorted(str1) == sorted(str2) else \"Not anagrams\")"
       ]
     },
     {
